--- a/src/MainFrame.form
+++ b/src/MainFrame.form
@@ -187,6 +187,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="ll"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="pauseActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="stop">
           <Properties>
